// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSpaceIcon Snapshots should match snapshot for custom logo 1`] = `
<div>
  <div>
    <img
      alt="Fenerbahçe SK"
      src="https://example.com/fenerbahce.png"
      style="width: 32px; height: 32px; object-fit: contain;"
    />
  </div>
</div>
`;

exports[`getSpaceIcon Snapshots should match snapshot for transport icon 1`] = `
<div>
  <div>
    <svg
      class="lucide lucide-trophy w-8 h-8"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"
      />
      <path
        d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"
      />
      <path
        d="M4 22h16"
      />
      <path
        d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"
      />
      <path
        d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"
      />
      <path
        d="M18 2H6v7a6 6 0 0 0 12 0V2Z"
      />
    </svg>
  </div>
</div>
`;

exports[`getSpaceIcon Snapshots should match snapshot for utility icon 1`] = `
<div>
  <div>
    <svg
      class="lucide lucide-zap w-8 h-8"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
      />
    </svg>
  </div>
</div>
`;

exports[`getSpaceIcon should match snapshots for transport icon, utility icon, and custom logo 1`] = `
<div>
  <div>
    <svg
      class="lucide lucide-trophy w-8 h-8"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"
      />
      <path
        d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"
      />
      <path
        d="M4 22h16"
      />
      <path
        d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"
      />
      <path
        d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"
      />
      <path
        d="M18 2H6v7a6 6 0 0 0 12 0V2Z"
      />
    </svg>
  </div>
</div>
`;

exports[`getSpaceIcon should match snapshots for transport icon, utility icon, and custom logo 2`] = `
<div>
  <div>
    <svg
      class="lucide lucide-zap w-8 h-8"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
      />
    </svg>
  </div>
</div>
`;

exports[`getSpaceIcon should match snapshots for transport icon, utility icon, and custom logo 3`] = `
<div>
  <div>
    <img
      alt="Fenerbahçe SK"
      src="https://example.com/fenerbahce.png"
      style="width: 32px; height: 32px; object-fit: contain;"
    />
  </div>
</div>
`;
